<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/Ueberwachungstafel">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#C0C0C0"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/einsatznummer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Einsatznummer: 2023 2345678"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/datum"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Datum: 12.02.2023"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/einsatzadresse"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Einsatzstraße: Musterstraße 1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/rufgruppe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Rufgruppe"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/einsatzleiter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Einsatzleiter: LOL 1"
            android:textSize="18sp" />
...
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#E0E0E0"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/funkrufname"
                    android:textAlignment="center"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Funkrufname: Angriffstrupp HLF-1"
...
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text=""
                        android:textSize="24sp" />

                    <TextView
                        android:id="@+id/truppfuehrer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Truppführer: Name1"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/truppmann"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Truppmann:  Name2"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/truppmann2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Truppmann 2: Name2"
                        android:textSize="18sp" />
...
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:id="@+id/verortung"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="Standort: ---"
                        android:textSize="24sp" />
...
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:orientation="vertical">


                    <Button
                        android:id="@+id/erstertrupp"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="#919191"
                        android:text="FUNKRUFNAME TRUPP 1 0:00"
                        />
...
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/zweitertrupp"
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:layout_weight="1"
                        android:backgroundTint="#919191"
                        android:text="FUNKRUFNAME TRUPP 2 0:00" />


                </LinearLayout>



...
